--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
                         <div class="hero__money-exchange-box">
                             <div class="hero__money-exchange-country">
                                 <div class="hero__money-exchange-country-flag">
-                                    <img class="hero__money-exchange-country-img" src="/images/inr.png" alt="INR">
+                                    <img class="hero__money-exchange-country-img" src="../images/inr.png" alt="INR">
                                     INR
                                 </div>
                                 <p class="hero__money-exchange-country-text">Indian Rupees</p>
                             </div>
                             <div class="hero__money-exchange-country">
                                 <div class="hero__money-exchange-country-flag">
-                                    <img class="hero__money-exchange-country-img" src="/images/usd.png" alt="USD">
+                                    <img class="hero__money-exchange-country-img" src="../images/usd.png" alt="USD">
                                     USD
                                 </div>
                                 <p class="hero__money-exchange-country-text">United States Dollar</p>
