--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StreamVibe</title>
+    <title>YourBank</title>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">    
+    <script src="./js/burger.js"></script>
 
 </head>
 <body>   
@@ -20,17 +21,17 @@
                 </svg>
             </div>
             <ul class="header__nav-list">
-                <li class="header__nav-item current">
-                    <a class="header__nav-link " href="">Home</a>
+                <li>
+                    <a class="header__nav-link " href="#">Home</a>
                 </li>
-                <li class="header__nav-item">
-                    <a class="header__nav-link" href="">Careers</a>
+                <li>
+                    <a class="header__nav-link" href="#">Careers</a>
                 </li>
-                <li class="header__nav-item">
-                    <a class="header__nav-link" href="">About</a>
+                <li>
+                    <a class="header__nav-link" href="#">About</a>
                 </li>
-                <li class="header__nav-item">
-                    <a class="header__nav-link" href="">Security</a>
+                <li>
+                    <a class="header__nav-link" href="#">Security</a>
                 </li>
             </ul>
             <div class="header__btns">
@@ -42,6 +43,9 @@
                     <use href="./images/icons.svg#icon-mobile-menu"></use>
                 </svg>
             </button>
+            <!-- <div class="menu-icon">
+                <span class="burger"></span>
+            </div> -->
         </div>
     </header>
 
